# dog_ws

./: .gitignore
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/robot/local/lib/python3.10/dist-packages/robot/: imu_process_node.py  motor_init2.py  node_pub.py  unitree_go_1.py
install/robot/share/robot/: local_setup.sh  package.sh  package.xml
install/unitree_legged_msgs/include/unitree_legged_msgs/unitree_legged_msgs/msg/detail/: motor_state__builder.hpp  motor_state__functions.c  motor_state__struct.hpp  motor_state__type_support.cpp
install/unitree_legged_msgs/local/lib/python3.10/dist-packages/unitree_legged_msgs-0.0.0-py3.10.egg-info/: PKG-INFO
install/unitree_legged_msgs/local/lib/python3.10/dist-packages/unitree_legged_msgs/msg/: _motor_state.py
install/unitree_legged_msgs/share/unitree_legged_msgs/: package.sh
install/unitree_legged_msgs/share/unitree_legged_msgs/cmake/: ament_cmake_export_targets-extras.cmake  export_unitree_legged_msgs__rosidl_generator_cExport.cmake  export_unitree_legged_msgs__rosidl_generator_pyExport-noconfig.cmake  export_unitree_legged_msgs__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_unitree_legged_msgs__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_unitree_legged_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  unitree_legged_msgs__rosidl_typesupport_cExport.cmake  unitree_legged_msgs__rosidl_typesupport_cppExport.cmake  unitree_legged_msgs__rosidl_typesupport_introspection_cExport.cmake
install/unitree_legged_msgs/share/unitree_legged_msgs/msg/: MotorState.idl
src/robot/: ANALYSIS_SUMMARY.md  CMAKE_INTEGRATION_GUIDE.md  CMakeLists.txt  CMakeLists_enhanced.txt  QUICK_REFERENCE.md  SDK_ANALYSIS.md  setup.py
src/robot/launch/: imu_launch.py
src/robot/robot/: ._decision_control.py  ._manual.py  ._upper_comms_node.py  2.py  SMOOTH_CONTROL_INTEGRATION_GUIDE.md  auto_obstacle.py  decision_control.py  manual.py  motor_init.py  serial_node.py  unitree_go_1.py  upper_comms_node.py
src/unitree_legged_msgs/: CMakeLists.txt  package.xml
