<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot</name>
  <version>0.0.0</version>
  <description>ROS2 robot package (with Unitree Actuator SDK)</description>
  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Python核心依赖 -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <!-- 串口所需依赖（pyserial） -->
  <exec_depend>python3-serial</exec_depend>
  <!-- ========== 新增：SDK所需依赖 ========== -->
  <exec_depend>libstdc++6</exec_depend>  # 适配SDK的C++动态库
  <exec_depend>python3.8</exec_depend>   # 指定Python 3.8运行时
  <exec_depend>unitree_legged_msgs</exec_depend>  # 若复用该消息包

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>